tests/baselines/reference/typeofOperatorInvalidOperations.errors.txt
==== tests/cases/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorInvalidOperations.ts (3 errors) ====
    // Unary operator typeof
    
    // opreand before typeof
    var ANY = ANY typeof ;    //expect error
                  ~~~~~~
!!! error TS1005: ',' expected.
                         ~
!!! error TS1109: Expression expected.
    
    // miss an operand
    var ANY1 = typeof ;
                      ~
!!! error TS1109: Expression expected.